--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8081
+server.servlet.context-path=/app
 
+value.name=Bryan
+value.apellido=Serna
+value.random=${random.value}
+
+user.email=test@mail.com
+user.password=1234
+user.age=25
